crates/before/tests/ui/clock_into_empty_array.stderr
error[E0080]: evaluation panicked: a `Clock` cannot split into zero shares
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `before::clock::forks::<impl std::convert::From<before::Clock> for [before::Clock; 0]>::from::{constant#1}` failed here
  |
 ::: src/clock/forks.rs
  |
  |         const { assert!(N >= 1, "a `Clock` cannot split into zero shares") }
  |                 ---------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/clock/forks.rs
  |
  |         const { assert!(N >= 1, "a `Clock` cannot split into zero shares") }
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn before::clock::forks::<impl From<before::Clock> for [before::Clock; 0]>::from`
 --> $RUST/core/src/convert/mod.rs
  |
  |         U::from(self)
  |         ^^^^^^^^^^^^^

error[E0080]: evaluation panicked: a `Party` cannot split into zero shares
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `before::party::forks::<impl std::convert::From<before::Party> for [before::Party; 0]>::from::{constant#1}` failed here
  |
 ::: src/party/forks.rs
  |
  |         const { assert!(N >= 1, "a `Party` cannot split into zero shares") }
  |                 ---------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/party/forks.rs
  |
  |         const { assert!(N >= 1, "a `Party` cannot split into zero shares") }
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn before::party::forks::<impl From<before::Party> for [before::Party; 0]>::from`
 --> $RUST/core/src/convert/mod.rs
  |
  |         U::from(self)
  |         ^^^^^^^^^^^^^
